[package]
name = "proc_stop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.release]
# lto = true
# opt-level = "z"  # Optimize for size.
# codegen-units = 1
# strip = true

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
console = { version = "0.15.8", features = ["windows-console-colors"] }
crossbeam = "0.8.4"
winapi = { version = "0.3.9", features = ["psapi", "processthreadsapi", "winnt", "winerror", "handleapi"] }
